<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="0dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/frame1_control"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="visible">

        <Switch
            android:id="@+id/switch_enable_bt"
            android:layout_width="wrap_content"
            android:layout_height="40dp"

            android:layout_marginTop="0dp"
            android:layout_weight="1"
            android:text="@string/bluetooth_on_off"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_enable_search"
            android:layout_width="160dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/start_search" />

        <Button
            android:id="@+id/btn_disconnect"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/disconnect" />

        <Button
            android:id="@+id/btn_exit"
            android:layout_width="wrap_content"
            android:layout_height="40dp"

            android:layout_weight="1"
            android:text="@string/exit" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/frame_control"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">

        <ProgressBar
            android:id="@+id/pb_progress"
            style="@android:style/Widget.DeviceDefault.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:indeterminate="true"
            android:visibility="gone" />

        <ListView
            android:id="@+id/lv_bt_device"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="0dp"
            android:visibility="visible">

        </ListView>
    </LinearLayout>


    <RelativeLayout
        android:id="@+id/frameLedControls"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="vertical"
        android:visibility="gone">

        <Button
            android:id="@+id/btn_imp"
            android:layout_width="80dp"
            android:layout_height="37dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:background="@color/color_yellow_BUTTON"
            android:text=" 50 Ом" />

        <Button
            android:id="@+id/btn_scann"
            android:layout_width="125dp"
            android:layout_height="37dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="290dp"
            android:layout_marginTop="5dp"
            android:background="@color/color_yellow_BUTTON"
            android:text="@string/scanning" />

        <Button
            android:id="@+id/btn_exit2"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="425dp"
            android:layout_marginTop="5dp"
            android:background="@color/color_yellow_BUTTON"
            android:text="@string/exit" />

        <EditText
            android:id="@+id/et_console"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginLeft="200dp"
            android:layout_marginTop="35dp"
            android:editable="false"
            android:gravity="bottom"
            android:visibility="visible" />

        <com.jjoe64.graphview.GraphView
            android:id="@+id/gv_graph"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="70dp"
            android:layout_marginBottom="10dp"
            android:background="@color/color_yellow"
            android:visibility="visible" />

        <ProgressBar
            android:id="@+id/progressBar3"
            style="@android:style/Widget.DeviceDefault.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="15dp"
            android:indeterminate="true"
            android:visibility="gone" />

        <Spinner
            android:id="@+id/steps"
            android:layout_width="80dp"
            android:layout_height="37dp"
            android:layout_marginLeft="92dp"
            android:layout_marginTop="5dp"
            android:background="@color/color_yellow_BUTTON"
            android:dropDownSelector="#00ffff"
            android:spinnerMode="dialog" />

        <Spinner
            android:id="@+id/bends"
            android:layout_width="100dp"
            android:layout_height="37dp"
            android:layout_marginLeft="180dp"
            android:layout_marginTop="5dp"
            android:background="@color/color_yellow_BUTTON"
            android:dropDownSelector="#00ffff"
            android:spinnerMode="dialog" />

        <TextView
            android:id="@+id/textSWR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="45dp"
            android:text=" SWR"
            android:textColor="@color/color_red"
            android:textSize="18dp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/textR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="45dp"
            android:text=" - R"
            android:textColor="@color/color_green"
            android:textSize="18dp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/textV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="95dp"
            android:layout_marginTop="45dp"
            android:text=" - X"
            android:textColor="@color/color_blue"
            android:textSize="18dp"
            android:textStyle="italic" />

    </RelativeLayout>

    <FrameLayout
        android:id="@+id/frame_message"
        android:layout_width="244dp"
        android:layout_height="131dp"
        android:visibility="visible">

    </FrameLayout>

</LinearLayout>